@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-11T08:25:27Z",
+  "timestamp" : "2022-07-11T16:27:21Z",
   "count_outdated" : 383,
   "uniques_outdated" : 208,
-  "count" : 414,
+  "count" : 415,
   "uniques" : 225,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
